--- a/bigpic/conference_details.yml
+++ b/bigpic/conference_details.yml
@@ -1,6 +1,6 @@
 book_title: Proceedings of the the Big Picture Workshop
 event_name: The Big Picture Workshop
-cover_subtitle: Proceedings of the Worksho[]
+cover_subtitle: Proceedings of the Workshop
 anthology_venue_id: BigPicture
 start_date: 2023-12-07
 end_date: 2023-12-07
