fixes to resources

--- a/bigpic/conference_details.yml
+++ b/bigpic/conference_details.yml
@@ -1,5 +1,6 @@
 book_title: Proceedings of the the Big Picture Workshop
 event_name: The Big Picture Workshop
+volume_name: 1
 cover_subtitle: Proceedings of the Workshop
 anthology_venue_id: BigPicture
 start_date: 2023-12-07
