workshop intro + small edits

--- a/bigpic/program_committee.yml
+++ b/bigpic/program_committee.yml
@@ -4,8 +4,7 @@
     first_name: Yanai
     google_scholar_id: https://scholar.google.co.il/citations?user=7p_Ce8kAAAAJ
     homepage: https://yanaiela.github.io
-    institution: Allen Institute for Artificial Intelligence and Department of Computer
-      Science
+    institution: Allen Institute for Artificial Intelligence and University of Washington
     last_name: Elazar
     name: Yanai Elazar
     semantic_scholar_id: https://www.semanticscholar.org/author/Yanai-Elazar/51131518
