--- a/bigpic/invited_talks.yml
+++ b/bigpic/invited_talks.yml
@@ -1,17 +1,71 @@
-- title: Invited 1
-  abstract_file: invited1.tex
-  speaker_name: Jhon Doe
-  institution: University of California
-  bio_file: invited1_bio.tex
-  date: 2020-07-01 18:30:00
-  location: Room 1
-  chair: Chair 1
+- title: The Vision Thing:\, Finding and Pursuing your Research Passion
+  abstract_file: abstract_ray.tex
+  speaker_name: Raymond J. Mooney
+  institution: UT Austin
+  bio_file: bio_ray.tex
+  date: 2023-12-07 09:15:00
+  location: Virgo 1 \& 2
+  chair: Yanai Elazar
 
-- title: Invited 2
-  abstract_file: invited2.tex
-  speaker_name: Jennifer Doe
-  institution: University of New York
-  bio_file: invited2_bio.tex
-  date: 2020-07-02 18:30:00
-  location: Room 2
-  chair: Chair 2
+- title: Is "Attention = Explanation" and the Role of Interpretability in NLP
+  abstract_file: abstract_attention.tex
+  speaker_name: Sarah Wiegreffe
+  institution: AI2 \& UW
+  bio_file: bio_sarah.tex
+  date: 2023-12-07 11:00:00
+  location: Virgo 1 \& 2
+  chair: Nora Kassner
+
+- title: Is "Attention = Explanation" and the Role of Interpretability in NLP
+  abstract_file: abstract_attention.tex
+  speaker_name: Sarthak Jain
+  institution: AWS AI Labs
+  bio_file: bio_sarthak.tex
+  date: 2023-12-07 11:00:00
+  location: Virgo 1 \& 2
+  chair: Nora Kassner
+
+- title: On the Outcomes of Scientific Disagreements of Machine Morality
+  abstract_file: abstract_morality.tex
+  speaker_name: Liwei Jiang
+  institution: University of Washington
+  bio_file: bio_liwei.tex
+  date: 2023-12-07 13:30:00
+  location: Virgo 1 \& 2
+  chair: Nora Kassner
+
+- title: On the Outcomes of Scientific Disagreements of Machine Morality
+  abstract_file: abstract_morality.tex
+  speaker_name: Zeerak Talat
+  institution: Mohamed Bin Zayed University of Artificial Intelligence
+  bio_file: bio_zeerak.tex
+  date: 2023-12-07 13:30:00
+  location: Virgo 1 \& 2
+  chair: Nora Kassner
+
+- title: The Role of Demonstrations:\, What In-Context Learning actually does
+  abstract_file: abstract_icl.tex
+  speaker_name: Sewon Min
+  institution: University of Washington
+  bio_file: bio_sewon.tex
+  date: 2023-12-07 16:00:00
+  location: Virgo 1 \& 2
+  chair: Sebastian Ruder
+
+- title: The Role of Demonstrations:\, What In-Context Learning actually does
+  abstract_file: abstract_icl.tex
+  speaker_name: Junyeob Kim
+  institution: Seoul National University
+  bio_file: bio_junyeob.tex
+  date: 2023-12-07 16:00:00
+  location: Virgo 1 \& 2
+  chair: Sebastian Ruder
+
+- title: The Role of Demonstrations:\, What In-Context Learning actually does
+  abstract_file: abstract_icl.tex
+  speaker_name: Kang Min Yoo
+  institution: NAVER Cloud, NAVER AI Lab
+  bio_file: bio_kang.tex
+  date: 2023-12-07 16:00:00
+  location: Virgo 1 \& 2
+  chair: Sebastian Ruder
